--- a/styles.css
+++ b/styles.css
@@ -40,14 +40,17 @@
 }
 
 input[type="range"] {
+  -webkit-user-select: none;
   -webkit-appearance: none;
   margin: 18px 0;
   width: 100%;
 }
 input[type="range"]:focus {
+  -webkit-user-select: none;
   outline: none;
 }
 input[type="range"]::-webkit-slider-runnable-track {
+  -webkit-user-select: none;
   width: 100%;
   height: 8.4px;
   cursor: pointer;
@@ -57,6 +60,7 @@ input[type="range"]::-webkit-slider-runnable-track {
   border: 0.2px solid #010101;
 }
 input[type="range"]::-webkit-slider-thumb {
+  -webkit-user-select: none;
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
   border: 1px solid #000000;
   height: 36px;
@@ -68,9 +72,11 @@ input[type="range"]::-webkit-slider-thumb {
   margin-top: -14px;
 }
 input[type="range"]:focus::-webkit-slider-runnable-track {
+  -webkit-user-select: none;
   background: steelblue;
 }
 input[type="range"]::-moz-range-track {
+  -webkit-user-select: none;
   width: 100%;
   height: 20px;
   cursor: pointer;
@@ -80,6 +86,7 @@ input[type="range"]::-moz-range-track {
   border: 0.2px solid #010101;
 }
 input[type="range"]::-moz-range-thumb {
+  -webkit-user-select: none;
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
   border: 1px solid #000000;
   height: 36px;
@@ -89,6 +96,7 @@ input[type="range"]::-moz-range-thumb {
   cursor: pointer;
 }
 input[type="range"]::-ms-track {
+  -webkit-user-select: none;
   width: 100%;
   height: 8.4px;
   cursor: pointer;
@@ -98,18 +106,21 @@ input[type="range"]::-ms-track {
   color: transparent;
 }
 input[type="range"]::-ms-fill-lower {
+  -webkit-user-select: none;
   background: steelblue;
   border: 0.2px solid #010101;
   border-radius: 2.6px;
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
 }
 input[type="range"]::-ms-fill-upper {
+  -webkit-user-select: none;
   background: steelblue;
   border: 0.2px solid #010101;
   border-radius: 2.6px;
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
 }
 input[type="range"]::-ms-thumb {
+  -webkit-user-select: none;
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
   border: 1px solid #000000;
   height: 36px;
@@ -119,13 +130,16 @@ input[type="range"]::-ms-thumb {
   cursor: pointer;
 }
 input[type="range"]:focus::-ms-fill-lower {
+  -webkit-user-select: none;
   background: steelblue;
 }
 input[type="range"]:focus::-ms-fill-upper {
+  -webkit-user-select: none;
   background: steelblue;
 }
 
 input[type="range"]::-moz-focus-outer {
+  -webkit-user-select: none;
   border: 0;
 }
 
