--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,9 @@
   white-space: nowrap;
   overflow: hidden;
   padding: 20px 0 0 0;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 .top-heading {
   padding: 2px 10px 0 10px;
@@ -51,6 +54,8 @@ input[type="range"]:focus {
 }
 input[type="range"]::-webkit-slider-runnable-track {
   -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   width: 100%;
   height: 8.4px;
   cursor: pointer;
@@ -61,6 +66,8 @@ input[type="range"]::-webkit-slider-runnable-track {
 }
 input[type="range"]::-webkit-slider-thumb {
   -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
   border: 1px solid #000000;
   height: 36px;
@@ -73,10 +80,14 @@ input[type="range"]::-webkit-slider-thumb {
 }
 input[type="range"]:focus::-webkit-slider-runnable-track {
   -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   background: steelblue;
 }
 input[type="range"]::-moz-range-track {
   -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   width: 100%;
   height: 20px;
   cursor: pointer;
@@ -87,6 +98,8 @@ input[type="range"]::-moz-range-track {
 }
 input[type="range"]::-moz-range-thumb {
   -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
   border: 1px solid #000000;
   height: 36px;
@@ -97,6 +110,8 @@ input[type="range"]::-moz-range-thumb {
 }
 input[type="range"]::-ms-track {
   -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   width: 100%;
   height: 8.4px;
   cursor: pointer;
@@ -107,6 +122,8 @@ input[type="range"]::-ms-track {
 }
 input[type="range"]::-ms-fill-lower {
   -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   background: steelblue;
   border: 0.2px solid #010101;
   border-radius: 2.6px;
@@ -114,6 +131,8 @@ input[type="range"]::-ms-fill-lower {
 }
 input[type="range"]::-ms-fill-upper {
   -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   background: steelblue;
   border: 0.2px solid #010101;
   border-radius: 2.6px;
@@ -121,6 +140,8 @@ input[type="range"]::-ms-fill-upper {
 }
 input[type="range"]::-ms-thumb {
   -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
   border: 1px solid #000000;
   height: 36px;
@@ -131,15 +152,21 @@ input[type="range"]::-ms-thumb {
 }
 input[type="range"]:focus::-ms-fill-lower {
   -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   background: steelblue;
 }
 input[type="range"]:focus::-ms-fill-upper {
   -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   background: steelblue;
 }
 
 input[type="range"]::-moz-focus-outer {
   -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   border: 0;
 }
 
