--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,9 @@
 .top-heading {
   padding: 2px 10px 0 10px;
   height: 80px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 #casesHeading {
@@ -35,6 +38,9 @@
 #date,
 #zoom {
   font-size: 14pt;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 .form-group label {
