--- a/styles.css
+++ b/styles.css
@@ -9,26 +9,51 @@
   margin: 0 auto;
 }
 #covid19Title {
-  font-size: 20pt;
+  font-size: 18pt;
   white-space: nowrap;
   overflow: hidden;
-  padding: 20px 0 0 0;
+  padding: 2px 0 0 0;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
 }
 .top-heading {
   padding: 2px 10px 0 10px;
-  height: 80px;
+  height: 100px;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
 }
 
-#casesHeading {
-  margin: 32px 0 0 5px;
+.col-6 {
+  margin: 0;
   padding: 0;
+}
+
+#casesHeading {
+  display: flex;
+  flex-direction: column;
   font-size: 32px;
+  width: 100%;
+}
+
+.numberTotals {
+  display: flex;
+  align-items: center;
+}
+
+h6 {
+  padding: 0;
+  margin: 0;
+  font-size: 0.5em;
+  width: 33.3%;
+}
+
+#totalCases,
+#totalRecoveries,
+#totalDeaths {
+  font-size: 0.7em;
+  width: 33.3%;
 }
 
 #description {
@@ -43,15 +68,10 @@
   -ms-user-select: none;
 }
 
-.form-group label {
-  position: relative;
-  bottom: 12px;
-}
-
 input[type="range"] {
   -webkit-user-select: none;
   -webkit-appearance: none;
-  margin: 18px 0;
+  margin: 24px 0 10px 0;
   width: 100%;
 }
 input[type="range"]:focus {
@@ -189,6 +209,9 @@ input[type="range"]::-moz-focus-outer {
 }
 
 @media only screen and (max-width: 840px) {
+  .top-heading {
+    height: 120px;
+  }
   h3 {
     font-size: 16pt;
   }
@@ -200,30 +223,44 @@ input[type="range"]::-moz-focus-outer {
 
 @media only screen and (max-width: 576px) {
   h3 {
-    font-size: 20pt;
+    font-size: 16pt;
     text-align: center;
   }
   #date {
     text-align: center;
   }
   .top-heading {
-    height: 180px;
-    padding: 2px 10px 15px 10px;
-  }
-  #casesHeading {
-    margin: 140px 0 0 5px;
+    margin: 0;
+    display: block;
+    height: 220px;
   }
 
+  .numberTotals {
+    display: flex;
+  }
+
+  .col-6 {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    padding-top: 25px;
+  }
   .sliders {
+    display: block;
     margin: 0 10px;
   }
 
   .form-group {
-    height: 18px;
+    height: 10px;
   }
-  #zoomRangeSlider {
+
+  h6 {
+    height: 20px;
+  }
+
+  .form-group label {
     position: relative;
-    bottom: 16px;
+    bottom: 10px;
   }
 
   #description {
@@ -233,10 +270,19 @@ input[type="range"]::-moz-focus-outer {
   input[type="range"]::-webkit-slider-thumb,
   input[type="range"]::-moz-range-thumb,
   input[type="range"]::-ms-thumb {
-    width: 26px;
+    width: 30px;
   }
 
   #casesHeading span {
-    font-size: 0.8em;
+    font-size: 0.7em;
+  }
+
+  #zoomRangeSlider {
+    position: relative;
+    bottom: 15px;
+  }
+
+  #chart-area {
+    margin-top: 160px;
   }
 }
