--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ h6 {
 }
 
 #description {
-  margin: 0 5px;
+  margin: 60px 5px 0 5px;
 }
 
 #date,
@@ -218,6 +218,9 @@ input[type="range"]::-moz-focus-outer {
   #casesHeading span {
     display: block;
     text-align: center;
+  }
+  #description {
+    margin: 80px 5px 0 5px;
   }
 }
 
